envoy/filter/wasm/envoy.yaml
---
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901

static_resources:

  listeners:
    - address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: upstream
            http_filters:
              - name: envoy.filters.http.wasm
                typed_config:
                  "@type": type.googleapis.com/envoy.config.filter.http.wasm.v2.Wasm
                  config:
                    name: "my_plugin"
                    root_id: "my_root_id"
                    vm_config:
                      vm_id: "my_vm_id"
                      runtime: "envoy.wasm.runtime.wavm"
                      code:
                        local:
                          filename: "/etc/envoy/filter.wasm"
                      allow_precompiled: true
              - name: envoy.router

  clusters:
    - name: upstream
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: envoy-upstream
                  port_value: 8080
